# CoAgentia

./: .gitattributes  .gitignore  AGENTS.md  README.md  README_EN.md  README_JA.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/daemon/: README.md  pyproject.toml
apps/daemon/src/coagentia_daemon/: __init__.py  __main__.py  adapter.py  buffer.py  checks.py  cli.py  client.py  deploy.py  git.py  handlers.py  logconfig.py  paths.py  preview.py  probe.py  transport.py  util.py
apps/daemon/src/coagentia_daemon/adapters/: __init__.py  base.py  claude_code.py  cmdline.py  codex.py  codex_cmdline.py  encoding.py  frames.py  mcp.py
apps/daemon/tests/: adapter_helpers.py  conftest.py  helpers.py  test_adapter_codex.py  test_adapter_encoding_cmdline.py  test_adapter_frames.py  test_adapter_lifecycle.py  test_adapter_mcp.py  test_adapter_smoke.py  test_buffer.py  test_checks.py  test_deploy.py  test_git_diff.py  test_git_worktrees.py  test_idempotency.py  test_integration.py  test_logconfig.py  test_paths.py  test_preview.py  test_probe.py  test_pswt_fs_scan.py  test_reconnect.py  test_worktree_handlers.py
apps/mock-server/: pyproject.toml
apps/mock-server/src/coagentia_mock/: app.py  events.py  state.py
apps/mock-server/tests/: test_contract_conformance.py
apps/server/: README.md  alembic.ini  pyproject.toml
apps/server/migrations/: env.py
apps/server/migrations/versions/: 0001_m1_initial.py  0002_m2.py  0003_m3.py  0004_files_indexes.py  0005_fts_trigram.py  0006_m4_held_drafts.py  0007_m5.py  0008_m6a.py  0009_m6b.py  0010_m7a.py  0011_m7b.py  0012_m8.py  0013_b1_suggested_owner.py
apps/server/src/coagentia_server/: __init__.py  __main__.py  api.py  app.py  deps.py
apps/server/src/coagentia_server/activity/: __init__.py  service.py
apps/server/src/coagentia_server/canvas/: service.py
apps/server/src/coagentia_server/computers/: __init__.py  gateway_tx.py  hub.py
apps/server/src/coagentia_server/contracts/: __init__.py  service.py
apps/server/src/coagentia_server/db/: __init__.py  engine.py  models.py  seed.py
apps/server/src/coagentia_server/events/: __init__.py  bus.py
apps/server/src/coagentia_server/files/: __init__.py  gc.py  store.py
apps/server/src/coagentia_server/guard/: __init__.py  service.py
apps/server/src/coagentia_server/ledger/: __init__.py  replay.py  service.py
apps/server/src/coagentia_server/messages/: __init__.py  service.py
apps/server/src/coagentia_server/orchestration/: delta.py  draft.py  landing.py  proposal.py  quality.py  role_templates.py  summary.py
apps/server/src/coagentia_server/reminders/: __init__.py  cadence.py  cron.py  interval.py
apps/server/src/coagentia_server/routes/: __init__.py  _pagination.py  activity.py  canvas.py  channels.py  computers.py  deployments.py  files.py  held_drafts.py  members.py  messages.py  projects.py  proposals.py  search.py  serialize.py  tasks.py  templates.py  usage.py  workspace.py  worktrees.py
apps/server/src/coagentia_server/system_nodes/: __init__.py  service.py
apps/server/src/coagentia_server/tasks/: __init__.py  merge.py  service.py  silence.py
apps/server/src/coagentia_server/templates/: __init__.py  builtin.py  service.py
apps/server/src/coagentia_server/worktrees/: __init__.py  console.py  service.py
apps/server/src/coagentia_server/ws/: __init__.py  hub.py
apps/server/tests/: conftest.py  daemon_helpers.py  perf_helpers.py  test_activity.py  test_activity_generation.py  test_alembic_upgrade.py  test_canvas.py  test_conformance_dual.py  test_contracts.py  test_cron.py  test_daemon.py  test_delta.py  test_deployments.py  test_diff.py  test_files.py  test_force_start.py  test_fts_sync.py  test_fts_trigram.py  test_gating.py  test_held_drafts.py  test_interval.py  test_landing.py  test_ledger.py  test_message_task_refs.py  test_notification_settings.py  test_onboarding_greeting.py  test_pagination_keyset.py  test_pragma.py  test_preview_domain.py  test_projects.py  test_proposals.py  test_quality.py  test_role_templates.py  test_schema_conformance.py  test_search.py  test_seed_load.py  test_server_api.py  test_silence.py  test_summary.py  test_system_nodes.py  (+13 more)
(+394 files in other folders)
