[project]
name = "coagentia-daemon"
version = "0.1.0"
description = "CoAgentia daemon: 执行面客户端（契约 D daemon 侧 + 契约 E 适配器接缝）"
requires-python = ">=3.12"
dependencies = [
    "coagentia-contracts",
    "websockets>=13",
]

[project.scripts]
coagentia-daemon = "coagentia_daemon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coagentia_daemon"]

[tool.uv.sources]
coagentia-contracts = { workspace = true }
