[project]
name = "coagentia-server"
version = "0.1.0"
description = "CoAgentia server: FastAPI + SQLAlchemy 2.0 + Alembic (M1 schema)"
requires-python = ">=3.12"
dependencies = [
    "coagentia-contracts",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.scripts]
coagentia-server = "coagentia_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coagentia_server"]

[tool.uv.sources]
coagentia-contracts = { workspace = true }
